// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InfoBox should match the snapshot 1`] = `
[
  <span
    className="main"
  >
    HEY
  </span>,
  <span>
    foo
  </span>,
  <input
    onInput={[Function]}
    type="text"
    value=""
  />,
  <span>
    <_st
      data={
        {
          "i": 0,
          "n": undefined,
          "t": {
            "S": [Circular],
            "e": undefined,
            "i": 0,
            "n": undefined,
            "p": {
              "S": {
                "i": 0,
                "n": undefined,
                "t": [Circular],
                "v": [Circular],
              },
              "e": undefined,
              "i": 0,
              "n": [Circular],
              "p": undefined,
              "r": undefined,
              "t": b {
                "f": 32,
                "o": undefined,
                "s": [Circular],
                "u": undefined,
                "x": [Function],
              },
              "x": undefined,
            },
            "r": undefined,
            "t": b {
              "f": 32,
              "o": undefined,
              "s": {
                "S": {
                  "i": 0,
                  "n": undefined,
                  "t": [Circular],
                  "v": [Circular],
                },
                "e": undefined,
                "i": 0,
                "n": [Circular],
                "p": undefined,
                "r": undefined,
                "t": [Circular],
                "x": undefined,
              },
              "u": undefined,
              "x": [Function],
            },
            "x": undefined,
          },
          "v": "",
        }
      }
    />
  </span>,
  <button
    onClick={[Function]}
  />,
]
`;

exports[`InfoBox should match the snapshot 2`] = `
[
  <span
    className="main"
  >
    HEY
  </span>,
  <span>
    bar
  </span>,
  <input
    onInput={[Function]}
    type="text"
    value=""
  />,
  <span>
    <_st
      data={
        {
          "i": 0,
          "n": undefined,
          "t": {
            "S": [Circular],
            "e": undefined,
            "i": 0,
            "n": undefined,
            "p": {
              "S": {
                "i": 0,
                "n": undefined,
                "t": [Circular],
                "v": [Circular],
              },
              "e": undefined,
              "i": 0,
              "n": [Circular],
              "p": undefined,
              "r": undefined,
              "t": b {
                "f": 32,
                "o": undefined,
                "s": [Circular],
                "u": undefined,
                "x": [Function],
              },
              "x": undefined,
            },
            "r": undefined,
            "t": b {
              "f": 32,
              "o": undefined,
              "s": {
                "S": {
                  "i": 0,
                  "n": undefined,
                  "t": [Circular],
                  "v": [Circular],
                },
                "e": undefined,
                "i": 0,
                "n": [Circular],
                "p": undefined,
                "r": undefined,
                "t": [Circular],
                "x": undefined,
              },
              "u": undefined,
              "x": [Function],
            },
            "x": {
              "S": [Circular],
              "e": [Circular],
              "i": 0,
              "n": undefined,
              "p": {
                "S": {
                  "i": 0,
                  "n": undefined,
                  "t": [Circular],
                  "v": [Circular],
                },
                "e": undefined,
                "i": 0,
                "n": [Circular],
                "p": undefined,
                "r": undefined,
                "t": b {
                  "f": 32,
                  "o": undefined,
                  "s": [Circular],
                  "u": undefined,
                  "x": [Function],
                },
                "x": undefined,
              },
              "r": undefined,
              "t": b {
                "f": 32,
                "o": undefined,
                "s": {
                  "S": {
                    "i": 0,
                    "n": undefined,
                    "t": [Circular],
                    "v": [Circular],
                  },
                  "e": undefined,
                  "i": 0,
                  "n": [Circular],
                  "p": undefined,
                  "r": undefined,
                  "t": [Circular],
                  "x": undefined,
                },
                "u": undefined,
                "x": [Function],
              },
              "x": undefined,
            },
          },
          "v": "",
        }
      }
    />
  </span>,
  <button
    onClick={[Function]}
  />,
]
`;
